Added authorization, registration, authentication

--- a/quotes/quoteapp/templates/quoteapp/detail.html
+++ b/quotes/quoteapp/templates/quoteapp/detail.html
@@ -2,8 +2,9 @@
 {% block content %}
 
 <h1>{{author.fullname}}</h1>
-<p>born_date: <b>{{author.born_date}}</b></p>
-<p>born_location: <b>{{author.born_location}}</b></p>
-<p>Descripton: <b>{{author.description}}</b></p>
+
+<p><b>Born Date:</b> {{author.born_date}}</p>
+<p><b>Born Location:</b> {{author.born_location}}</p>
+<p><b>Descripton:</b> {{author.description}}</p>
 
 {% endblock %}
