--- a/quotes/quoteapp/templates/quoteapp/base.html
+++ b/quotes/quoteapp/templates/quoteapp/base.html
@@ -15,11 +15,12 @@
 <body>
     <div class="container">
         <div class="row header-box">
-            <div class="col-md-4">
+            <div class="col-md-5 mr-2 mb-4">
                 <h1>
                     <a href="/" style="text-decoration: none">Quotes to Scrape</a>
                 </h1>
             </div>
+            {% if user.is_authenticated %}
             <div class="col-md-5 mt-2 mb-2">
                 <p>
                     <a href="/new_author" class="btn btn-primary">Add new Author</a>
@@ -27,15 +28,20 @@
                     <a href="/new_quote" class="btn btn-primary">Add new Quote</a>
                 </p>
             </div>
-            <div class="col-md-3 mt-2 mb-2">
+            <div class="col-md-2 mt-2 mb-2">
                 <p>
-                    <a href="/login" class="btn btn-primary">Login</a>
-                    <a href="/#" class="btn btn-primary">Logout</a>
-                    <a href="/#" class="btn btn-primary">SignUp</a>
+                    <a href="users/logout" class="btn btn-danger">Logout</a>
                 </p>
             </div>
+            {% else %}
+            <div class="col-md-6 mt-2 mb-2">
+                <p>
+                    <a href="users/login" class="btn btn-primary">LogIn</a>
+                    <a href="users/signup/" class="btn btn-primary">SignUp</a>
+                </p>
+            </div>
+            {% endif %}
         </div>
-
 
         {% block content %} {% endblock %}
 
