Home Work for the module web_13 Part 2

--- a/quotes/users/templates/users/signup.html
+++ b/quotes/users/templates/users/signup.html
@@ -15,6 +15,12 @@
         <span>{{ form.errors.username }}</span>
     </div>
     <div>
+        <label class="quote"> Email:
+            {{ form.email }}
+        </label>
+        <span>{{ form.errors.email }}</span>
+    </div>
+    <div>
         <label class="quote"> Password:
             {{ form.password1 }}
         </label>
